--- a/style.css
+++ b/style.css
@@ -179,7 +179,6 @@ body{
     margin-bottom: 1.5rem;
 }
 
-
 .ratings {
     width: 40px;
     height: 40px;
@@ -189,14 +188,11 @@ body{
     justify-content: center;
     background: var(--secondary-color);
     cursor: pointer;
-    transition: transform;
-    padding: 0;            
-}
-
-.ratings img {
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
+    transition: transform 0.3s, background 0.3s;
+    padding: 0;
+    border: none;
+    font-size: 18px;
+    color: white;
 }
 
 .ratings:hover {
